unpackaged/main/default/objects/Product2/fields/DealManagementOnly__c.field-meta.xml
<CustomField>
    <fullName>DealManagementOnly__c</fullName>
    <description>this checks the box on whether this is something only the deal management team should see.</description>
    <formula>IF(
     AND( Non_Quotable__c  = TRUE,
          NOT($Profile.Name = 'System Administrator'),
          NOT($Profile.Name = 'Deal Ops Administrator'),
          NOT($Profile.Name = 'Grafana System Admin Lite')
        ),
     TRUE,
     FALSE)</formula>
    <inlineHelpText>this checks the box on whether this is something only the deal management team should see.</inlineHelpText>
    <label>Deal Management Only</label>
    <type>Checkbox</type>
</CustomField>