unpackaged/main/default/objects/Product2/fields/Default_Intacct_Revenue_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_Intacct_Revenue_Template__c</fullName>
    <label>Default Intacct Revenue Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90 dy term 9 mo stra</fullName>
            </value>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Straight-line</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>