unpackaged/main/default/objects/Product2/fields/Intacct_GL_Group__c.field-meta.xml
<CustomField>
    <fullName>Intacct_GL_Group__c</fullName>
    <label>Intacct GL Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud contracted additional usage</fullName>
            </value>
            <value>
                <fullName>Cloud contracted subscription</fullName>
            </value>
            <value>
                <fullName>Cloud self-serve additional usage</fullName>
            </value>
            <value>
                <fullName>Cloud self-service subscription</fullName>
            </value>
            <value>
                <fullName>Enterprise additional usage</fullName>
            </value>
            <value>
                <fullName>Enterprise licensing</fullName>
            </value>
            <value>
                <fullName>Enterprise support</fullName>
            </value>
            <value>
                <fullName>Expenses-Commissions</fullName>
            </value>
            <value>
                <fullName>Other revenue</fullName>
            </value>
            <value>
                <fullName>Professional services</fullName>
            </value>
            <value>
                <fullName>Sales credits</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>