unpackaged/main/default/objects/Product2/fields/Intacct_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Tax_Code__c</fullName>
    <label>Intacct Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxable</fullName>
                <default>true</default>
                <label>Taxable</label>
            </value>
            <value>
                <fullName>Nontaxable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>