unpackaged/main/default/objects/Product2/fields/Intacct_UOM_Group__c.field-meta.xml
<CustomField>
    <fullName>Intacct_UOM_Group__c</fullName>
    <label>Intacct UOM Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
                <default>true</default>
                <label>Count</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>