unpackaged/main/default/objects/Product2/fields/Non_Quotable__c.field-meta.xml
<CustomField>
    <fullName>Non_Quotable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the product that will not be permitted to be quoted until this box is unchecked</description>
    <inlineHelpText>This is the product that will not be permitted to be quoted until this box is unchecked</inlineHelpText>
    <label>Non-Quotable</label>
    <type>Checkbox</type>
</CustomField>