unpackaged/main/default/objects/Product2/fields/Product_Description2__c.field-meta.xml
<CustomField>
    <fullName>Product_Description2__c</fullName>
    <label>Product Description2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>