unpackaged/main/default/objects/Product2/listViews/Active_Products_SFDC_OR_Intacct.listView-meta.xml
<ListView>
    <fullName>Active_Products_SFDC_OR_Intacct</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>ia_crm__Intacct_Sync_Status__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>ia_crm__Item_Type__c</columns>
    <columns>Intacct_GL_Group__c</columns>
    <columns>Intacct_UOM_Group__c</columns>
    <columns>ia_crm__Billing_method__c</columns>
    <columns>ia_crm__Flat_fixed_amount_frequency__c</columns>
    <columns>Default_Intacct_Revenue_Template__c</columns>
    <columns>ia_crm__Taxable__c</columns>
    <columns>Intacct_Tax_Code__c</columns>
    <columns>Renewable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products (SFDC OR Intacct)</label>
</ListView>