unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>Non_Quotable__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Committed_ARR__c</columns>
    <columns>Intacct_GL_Group__c</columns>
    <columns>ia_crm__Item_Type__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>ia_crm__Sync_with_Intacct__c</columns>
    <columns>ia_crm__Intacct_Sync_Status_Image__c</columns>
    <columns>ia_crm__Intacct_Sync_Status__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>ia_crm__Change_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>